--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
             <li><a href="{{ site.basurl }}/testimonials" class="page-scroll">Testimonials</a></li>
             <li><a href="{{ site.basurl }}/photos" class="page-scroll">Photos</a></li>
             <li><a href="http://hackathons.hackinabox.tech" target="_blank" class="page-scroll">Hack-In-A-Box</a></li>
-            <li><a href="mailto:mdijkgraaf@princeton.edu" onclick="gtag('event', 'Contact: Header')" class="page-scroll">Contact</a></li>
+            <li><a href="mailto:kywu@princeton.edu" onclick="gtag('event', 'Contact: Header')" class="page-scroll">Contact</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
