--- a/css/legacy/bootstrap.css
+++ b/css/legacy/bootstrap.css
@@ -2984,6 +2984,8 @@ select[multiple].form-group-lg .form-control {
   background-image: none;
   border: 1px solid transparent;
   border-radius: 4px;
+  white-space:normal !important;
+  word-wrap: break-word; 
 }
 .btn:focus,
 .btn:active:focus,
