--- a/css/legacy/bootstrap.css
+++ b/css/legacy/bootstrap.css
@@ -3329,6 +3329,8 @@ fieldset[disabled] .btn-link:focus {
   font-size: 18px;
   line-height: 1.3333333;
   border-radius: 6px;
+  white-space:normal !important;
+  word-wrap: break-word; 
 }
 .btn-sm,
 .btn-group-sm > .btn {
