--- a/css/legacy/style.css
+++ b/css/legacy/style.css
@@ -674,6 +674,8 @@ button.btn.tf-btn.btn-default {
 	padding: 10px 40px;
 	color: #ffffff;
 	text-transform: uppercase;
+	white-space:normal !important;
+    word-wrap: break-word; 
 }
 
 .btn:active, .btn.active {
@@ -681,6 +683,8 @@ button.btn.tf-btn.btn-default {
 	outline: 0;
 	-webkit-box-shadow: none;
 	box-shadow: none;
+	white-space:normal !important;
+    word-wrap: break-word; 
 }
 
 .btn:focus,
