--- a/css/legacy/bootstrap.css
+++ b/css/legacy/bootstrap.css
@@ -2972,6 +2972,8 @@ select[multiple].form-group-lg .form-control {
   font-weight: normal;
   line-height: 1.42857143;
   text-align: center;
+  white-space:normal !important;
+  word-wrap: break-word; 
   vertical-align: middle;
   -ms-touch-action: manipulation;
       touch-action: manipulation;
