--- a/css/legacy/style.css
+++ b/css/legacy/style.css
@@ -129,6 +129,7 @@ font-weight: 900;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	color: #cfcfcf;
+	max-width: 100%;
 }
 
 #tf-home .overlay{
