--- a/css/legacy/bootstrap.css
+++ b/css/legacy/bootstrap.css
@@ -2972,7 +2972,7 @@ select[multiple].form-group-lg .form-control {
   font-weight: normal;
   line-height: 1.42857143;
   text-align: center;
-  white-space: nowrap;
+  white-space: normal !important;
   vertical-align: middle;
   -ms-touch-action: manipulation;
       touch-action: manipulation;
